# gpu-kmeans

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
apps/: kmeans_benchmark.cpp  kmeans_cli.cpp
include/gpukmeans/: distributed.hpp  io.hpp  kmeans.hpp  synthetic.hpp
src/: distributed.cpp  io.cpp  kmeans.cpp  kmeans_cuda.cu  kmeans_cuda_stub.cpp  kmeans_internal.hpp  synthetic.cpp
tests/: test_kmeans.cpp
tools/: plot_benchmarks.py  plot_clusters.py
